--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Zen+Tokyo+Zoo&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/ghost1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Speed Game</title>
   </head>
